# Examen_Final_Robotica

./: .bash_history  .bashrc  README.md  docker_ros2.sh
.cache/nvidia/GLCache/8efb846da2d64ec160666164e87b7b31/863b3b572e8373a5/: 2af83171a1bb0740.toc  2af83171a1bb0741.toc  4172f8fa96c0fd9b.toc  551370e09de73f96.toc  8c928cd82660520d.toc  8c928cd82660520e.toc  8c928cd82660520f.toc
.config/: QtProject.conf
.config/ros.org/: rqt_gui.ini
.rviz2/: default.rviz  persistent_settings
frame_trees/: frames_2025-12-28_23.24.12.gv  frames_2025-12-29_15.54.30.gv  frames_2025-12-29_16.05.08.gv  frames_2025-12-29_16.19.40.gv
src/palletizer_process_node/: package.xml  setup.cfg  setup.py
src/palletizer_process_node/config/: palletizer_params.yaml
src/palletizer_process_node/launch/: palletizer_process.launch.py
src/palletizer_process_node/palletizer_process_node/: __init__.py  aruco_tracker_node.py  box_approach_node.py  navigation_node.py  palletizer_state_machine.py  wall_approach_node.py
src/palletizer_v1_description/: CMakeLists.txt  package.xml
src/palletizer_v1_description/config/: gz_bridge.yaml  joint_names_caja1.yaml
src/palletizer_v1_description/launch/: display.launch.py  display_caja1.launch.py  gazebo.launch.py  rtabmap_mapping.launch.py  stereo_depth.launch.py
src/palletizer_v1_description/meshes/: aruco_marker_1.dae  base_link.STL  base_link_caja.STL  camera_link.STL  lidar_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  linkwh1.STL  linkwh2.STL  linkwh3.STL  linkwh4.STL  sensors_link.STL  wh1_link.STL  wh2_link.STL  wh3_link.STL  wh4_link.STL
src/palletizer_v1_description/models/aws_robomaker_warehouse_GroundB_01/: model.sdf
src/palletizer_v1_description/rviz2/: conf.rviz
src/palletizer_v1_description/src/: pointcloud_transform_publisher.cpp  stereo_camera_info_publisher.cpp  visual_odometry_publisher.cpp
src/palletizer_v1_description/urdf/: caja1.csv  caja1.urdf  palletizer_v1_description.csv  palletizer_v1_description.urdf
src/palletizer_v1_description/worlds/: small_warehouse.world  warehouse.world
