<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>palletizer_process_node</name>
    <version>1.0.0</version>
    <description>Intelligent palletizing process for box handling with ArUco detection</description>
    <maintainer email="user@example.com">hackbrian</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

    <exec_depend>python3-opencv</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-scipy</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
