<?xml version="1.0"?>
<package format="3">
  <name>palletizer_v1_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for palletizer_v1_description</p>
    <p>This package contains configuration data, 3D models and launch files
for palletizer_v1_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies for C++ node -->
  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <!-- RTAB-Map dependencies for 3D mapping -->
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Stereo depth image processing dependencies -->
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>